--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   vladicore-api:
-    image: ghcr.io/shinozakiaichi/vladicore-api:${IMAGE_TAG}
+    image: ghcr.io/shinozakiaichi/vladicore-api:${IMAGE_TAG:-latest}
     container_name: vladicore-api
     restart: unless-stopped
     expose:
