--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     dns:
       - 1.1.1.1
       - 8.8.8.8
+    dns_search: []
     container_name: vladicore-api
     restart: unless-stopped
     expose:
