--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   DOTNET_VERSION: '8.0.x'
-  IMAGE: ghcr.io/${{ github.repository_owner }}/vladicore-api
+  IMAGE: ghcr.io/shinozakiaichi/vladicore-api
 
 jobs:
   build-test:
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       packages: write
-      contents: write   # чтобы закоммитить обновлённый stack.env
+      contents: write
     steps:
       - uses: actions/checkout@v4
 
@@ -34,12 +34,12 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ secrets.GHCR_USERNAME }}
-          password: ${{ secrets.GHCR_TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push image
         run: |
-          docker build -t $IMAGE:latest .
+          docker build --pull -t $IMAGE:latest .
           docker tag $IMAGE:latest $IMAGE:${{ github.sha }}
           docker push $IMAGE:latest
           docker push $IMAGE:${{ github.sha }}
@@ -48,6 +48,7 @@ jobs:
         run: |
           sed -i "s/^IMAGE_TAG=.*/IMAGE_TAG=${{ github.sha }}/" stack.env
           git status --porcelain
+
       - name: Commit stack.env bump
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
