--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     dns:
       - 1.1.1.1
       - 8.8.8.8
+    ports:
+      - "8080:8080"
     dns_search: []
     container_name: vladicore-api
     restart: unless-stopped
