--- a/src/VladiCore.Api/appsettings.json
+++ b/src/VladiCore.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Postgres": "Host=localhost;Port=5432;Database=vladicore;Username=postgres;Password=postgres"
+    "Postgres": "Host=postgres;Port=5432;Database=shinozaki_db;Username=aichishinozaki;Password=aichishinozaki651"
   },
   "Jwt": {
     "Key": "change_this_ultra_secret_key_32b_min",
