--- a/stack.env
+++ b/stack.env
@@ -2,5 +2,5 @@
 IMAGE_TAG=1ec9f95260e28905c489bd62f25ca23e1f406f20
 
 JWT_KEY=5n6X6HHlrHxh2RpzkpAo/JrlI5a/onVxt3R8zcWbRRQ=
-POSTGRES_CONNSTR=Host=postgres;Port=5432;Database=shinozaki_db;Username=aichishinozaki;Password=aichishinozaki651
+POSTGRES_CONNSTR=Host=postgres;Port=5432;Database=shinozaki_db;Username=aichishinozaki;Password=aichishinozaki651;Include Error Detail=true;Search Path=public,core,catalog,sales,inventory
 
