--- a/src/VladiCore.Api/appsettings.json
+++ b/src/VladiCore.Api/appsettings.json
@@ -14,6 +14,9 @@
     "AccessMinutes": 30,
     "RefreshDays": 14
   },
+  "Cors": {
+    "AllowedOrigins": ["*"]
+  },
   "RateLimit": {
     "PermitPerMinute": 60
   },
