--- a/stack.env
+++ b/stack.env
@@ -2,4 +2,5 @@
 IMAGE_TAG=641c8230d7d8adee9f081e4e083a77f55982af86
 JWT_KEY=5n6X6HHlrHxh2RpzkpAo/JrlI5a/onVxt3R8zcWbRRQ=
 ConnectionStrings__Postgres=Host=postgres;Port=5432;Database=shinozaki_db;Username=aichishinozaki;Password=aichishinozaki651;Include Error Detail=true;Search Path=public,core,catalog,sales,inventory
+Cors__AllowedOrigins__0=*
 
