--- a/stack.env
+++ b/stack.env
@@ -1,6 +1,6 @@
 # первый деплой можно оставить latest, дальше CI будет писать SHA
 IMAGE_TAG=c75c0d5a23b62b8b8529dd0f0afd864e5ec7e85c
-JWT_KEY="5n6X6HHlrHxh2RpzkpAo/JrlI5a/onVxt3R8zcWbRRQ="
+JWT_KEY=5n6X6HHlrHxh2RpzkpAo/JrlI5a/onVxt3R8zcWbRRQ=
 ConnectionStrings__Postgres=Host=postgres;Port=5432;Database=shinozaki_db;Username=aichishinozaki;Password=aichishinozaki651;Include Error Detail=true;Search Path=public,core,catalog,sales,inventory
 Cors__AllowedOrigins__0=*
 
