Migrate backend to .NET 8 and MySQL Pomelo stack

--- a/src/VladiCore.PcBuilder/VladiCore.PcBuilder.csproj
+++ b/src/VladiCore.PcBuilder/VladiCore.PcBuilder.csproj
@@ -1,14 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net481</TargetFramework>
-    <LangVersion>7.3</LangVersion>
-    <Nullable>disable</Nullable>
-    <ImplicitUsings>disable</ImplicitUsings>
+    <TargetFramework>net8.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\VladiCore.Domain\VladiCore.Domain.csproj" />
     <ProjectReference Include="..\VladiCore.Data\VladiCore.Data.csproj" />
     <ProjectReference Include="..\VladiCore.Recommendations\VladiCore.Recommendations.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 </Project>
