--- a/src/VladiCore.Data/VladiCore.Data.csproj
+++ b/src/VladiCore.Data/VladiCore.Data.csproj
@@ -1,15 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net481</TargetFramework>
-    <LangVersion>7.3</LangVersion>
-    <Nullable>disable</Nullable>
-    <ImplicitUsings>disable</ImplicitUsings>
+    <TargetFramework>net8.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\VladiCore.Domain\VladiCore.Domain.csproj" />
-    <PackageReference Include="EntityFramework" Version="6.4.4" />
-    <PackageReference Include="MySql.Data" Version="8.1.0" />
-    <PackageReference Include="MySql.Data.EntityFramework" Version="8.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.143" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="MySqlConnector" Version="2.4.1" />
   </ItemGroup>
 </Project>
