--- a/src/VladiCore.Recommendations/VladiCore.Recommendations.csproj
+++ b/src/VladiCore.Recommendations/VladiCore.Recommendations.csproj
@@ -1,13 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net481</TargetFramework>
-    <LangVersion>7.3</LangVersion>
-    <Nullable>disable</Nullable>
-    <ImplicitUsings>disable</ImplicitUsings>
+    <TargetFramework>net8.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\VladiCore.Domain\VladiCore.Domain.csproj" />
     <ProjectReference Include="..\VladiCore.Data\VladiCore.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.143" />
   </ItemGroup>
 </Project>
