--- a/src/VladiCore.Domain/VladiCore.Domain.csproj
+++ b/src/VladiCore.Domain/VladiCore.Domain.csproj
@@ -4,4 +4,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="8.0.0" />
+  </ItemGroup>
 </Project>
