Implement reviews, S3 uploads, and auth hardening

--- a/src/VladiCore.Api/appsettings.Development.json
+++ b/src/VladiCore.Api/appsettings.Development.json
@@ -3,5 +3,16 @@
     "MinimumLevel": {
       "Default": "Debug"
     }
+  },
+  "S3": {
+    "Endpoint": "http://localhost:9000",
+    "Bucket": "vladicore-dev",
+    "AccessKey": "minioadmin",
+    "SecretKey": "minioadmin",
+    "UseSsl": false,
+    "CdnBaseUrl": ""
+  },
+  "Reviews": {
+    "RequireAuthentication": false
   }
 }
