--- a/src/VladiCore.Tests/VladiCore.Tests.csproj
+++ b/src/VladiCore.Tests/VladiCore.Tests.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Dapper" Version="2.0.143" />
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.8" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
     <PackageReference Include="MySqlConnector" Version="2.4.0" />
     <PackageReference Include="NUnit" Version="3.14.0" />
@@ -16,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\VladiCore.Api\VladiCore.Api.csproj" />
     <ProjectReference Include="..\VladiCore.Domain\VladiCore.Domain.csproj" />
     <ProjectReference Include="..\VladiCore.Data\VladiCore.Data.csproj" />
     <ProjectReference Include="..\VladiCore.PcBuilder\VladiCore.PcBuilder.csproj" />
