--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,17 @@ Jwt__Issuer=VladiCore
 Jwt__Audience=VladiCore
 Jwt__SigningKey=replace-with-secure-key
 
+# Object storage (S3/MinIO)
+S3__Endpoint=http://minio:9000
+S3__Bucket=vladicore
+S3__AccessKey=minioadmin
+S3__SecretKey=minioadmin
+S3__UseSsl=false
+S3__CdnBaseUrl=
+
+# Reviews module
+Reviews__RequireAuthentication=false
+
 # Logging
 Serilog__MinimumLevel__Default=Information
 Serilog__MinimumLevel__Override__Microsoft=Warning
