--- a/src/VladiCore.Api/appsettings.json
+++ b/src/VladiCore.Api/appsettings.json
@@ -21,5 +21,16 @@
         "System": "Warning"
       }
     }
+  },
+  "S3": {
+    "Endpoint": "http://minio:9000",
+    "Bucket": "vladicore",
+    "AccessKey": "minioadmin",
+    "SecretKey": "minioadmin",
+    "UseSsl": false,
+    "CdnBaseUrl": ""
+  },
+  "Reviews": {
+    "RequireAuthentication": false
   }
 }
