feat: add automatic database provisioning

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,15 @@ Serilog__MinimumLevel__Default=Information
 Serilog__MinimumLevel__Override__Microsoft=Warning
 Serilog__MinimumLevel__Override__System=Warning
 
+# Database auto-provisioning
+Database__AutoProvision__Enabled=true
+Database__AutoProvision__ApplySeeds=false
+Database__AutoProvision__TimeoutSeconds=120
+Database__AutoProvision__MigrationsPath=db/migrations/mysql
+Database__AutoProvision__SeedsPath=db/seed
+Database__AutoProvision__CreateDbIfMissing=true
+Database__AutoProvision__DatabaseName=vladicore
+
 # Docker networking
 # Name of the shared user-defined network that contains the database container.
 DOCKER_NETWORK_NAME=vladicore-backend
