--- a/src/VladiCore.Api/appsettings.Development.json
+++ b/src/VladiCore.Api/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "Database": {
+    "AutoProvision": {
+      "ApplySeeds": true
+    }
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug"
