--- a/src/VladiCore.Api/appsettings.json
+++ b/src/VladiCore.Api/appsettings.json
@@ -2,6 +2,17 @@
   "ConnectionStrings": {
     "Default": "Server=localhost;Port=3306;Database=vladicore;User Id=vladicore;Password=devpass;TreatTinyAsBoolean=true;CharSet=utf8mb4;"
   },
+  "Database": {
+    "AutoProvision": {
+      "Enabled": true,
+      "ApplySeeds": false,
+      "TimeoutSeconds": 120,
+      "MigrationsPath": "db/migrations/mysql",
+      "SeedsPath": "db/seed",
+      "CreateDbIfMissing": true,
+      "DatabaseName": "vladicore"
+    }
+  },
   "Cors": {
     "AllowedOrigins": [
       "http://localhost:5173",
