--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -20,6 +20,13 @@ services:
       Serilog__MinimumLevel__Default: ${Serilog__MinimumLevel__Default:-Information}
       Serilog__MinimumLevel__Override__Microsoft: ${Serilog__MinimumLevel__Override__Microsoft:-Warning}
       Serilog__MinimumLevel__Override__System: ${Serilog__MinimumLevel__Override__System:-Warning}
+      Database__AutoProvision__Enabled: ${Database__AutoProvision__Enabled:-true}
+      Database__AutoProvision__ApplySeeds: ${Database__AutoProvision__ApplySeeds:-false}
+      Database__AutoProvision__TimeoutSeconds: ${Database__AutoProvision__TimeoutSeconds:-120}
+      Database__AutoProvision__MigrationsPath: ${Database__AutoProvision__MigrationsPath:-db/migrations/mysql}
+      Database__AutoProvision__SeedsPath: ${Database__AutoProvision__SeedsPath:-db/seed}
+      Database__AutoProvision__CreateDbIfMissing: ${Database__AutoProvision__CreateDbIfMissing:-true}
+      Database__AutoProvision__DatabaseName: ${Database__AutoProvision__DatabaseName:-vladicore}
     ports:
       - "${API_HTTP_PORT:-8080}:8080"
     networks:
