Implement review moderation, voting, and soft deletes

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,8 @@ ConnectionStrings__Default=Server=vladicore-mysql;Port=3306;Database=vladicore;U
 Jwt__Issuer=VladiCore
 Jwt__Audience=VladiCore
 Jwt__SigningKey=replace-with-secure-key
+Jwt__AccessTokenTtlSeconds=900
+Jwt__RefreshTokenTtlSeconds=1209600
 
 # Object storage (S3/MinIO)
 S3__Endpoint=http://minio:9000
@@ -23,6 +25,7 @@ S3__CdnBaseUrl=
 
 # Reviews module
 Reviews__RequireAuthentication=false
+Reviews__UserEditWindowHours=24
 
 # Logging
 Serilog__MinimumLevel__Default=Information
