--- a/src/VladiCore.Api/appsettings.Development.json
+++ b/src/VladiCore.Api/appsettings.Development.json
@@ -18,6 +18,11 @@
     "CdnBaseUrl": ""
   },
   "Reviews": {
-    "RequireAuthentication": false
+    "RequireAuthentication": false,
+    "UserEditWindowHours": 24
+  },
+  "Jwt": {
+    "AccessTokenTtlSeconds": 900,
+    "RefreshTokenTtlSeconds": 1209600
   }
 }
