--- a/src/VladiCore.Api/appsettings.json
+++ b/src/VladiCore.Api/appsettings.json
@@ -22,7 +22,9 @@
   "Jwt": {
     "Issuer": "VladiCore",
     "Audience": "VladiCore",
-    "SigningKey": "replace-with-secure-key-please-change"
+    "SigningKey": "replace-with-secure-key-please-change",
+    "AccessTokenTtlSeconds": 900,
+    "RefreshTokenTtlSeconds": 1209600
   },
   "Serilog": {
     "MinimumLevel": {
@@ -42,6 +44,7 @@
     "CdnBaseUrl": ""
   },
   "Reviews": {
-    "RequireAuthentication": false
+    "RequireAuthentication": false,
+    "UserEditWindowHours": 24
   }
 }
