Seed HUD demo configs on startup

--- a/src/VladiCore.Api/appsettings.json
+++ b/src/VladiCore.Api/appsettings.json
@@ -46,5 +46,8 @@
   "Reviews": {
     "RequireAuthentication": false,
     "UserEditWindowHours": 24
+  },
+  "HudDemoConfigs": {
+    "OutputDirectory": "hud-configs"
   }
 }
