Improve JWT signing key validation guidance

--- a/.env.example
+++ b/.env.example
@@ -8,10 +8,10 @@ DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=0
 # Update the host, credentials, and database name to match your neighbour container.
 ConnectionStrings__Default=Server=vladicore-mysql;Port=3306;Database=vladicore;User Id=vladicore;Password=devpass;TreatTinyAsBoolean=true;CharSet=utf8mb4;
 
-# JWT configuration — replace with secure values for production.
+# JWT configuration — signing key must be at least 16 bytes (128 bits).
 Jwt__Issuer=VladiCore
 Jwt__Audience=VladiCore
-Jwt__SigningKey=replace-with-secure-key
+Jwt__SigningKey=replace-with-secure-key-at-least-32-bytes
 Jwt__AccessTokenTtlSeconds=900
 Jwt__RefreshTokenTtlSeconds=1209600
 
