--- a/src/VladiCore.PcBuilder/VladiCore.PcBuilder.csproj
+++ b/src/VladiCore.PcBuilder/VladiCore.PcBuilder.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 </Project>
