--- a/src/VladiCore.Tests/VladiCore.Tests.csproj
+++ b/src/VladiCore.Tests/VladiCore.Tests.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
     <PackageReference Include="MySqlConnector" Version="2.4.0" />
     <PackageReference Include="NUnit" Version="3.14.0" />
